Page wrap clear fix for widgets

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -753,7 +753,7 @@ body {
 
     // Widgets
 
-.main. .widget {
+.main .widget {
     .clearfix;
 }
 
